Prevent line break in flex element in chrome

--- a/themes/simple/assets/css/posts.css
+++ b/themes/simple/assets/css/posts.css
@@ -18,6 +18,7 @@
 
 #post-list li span {
   color: var(--medium-emphasis-text);
+  flex-shrink: 0;
 }
 
 #post-list li {
